--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -10146,7 +10146,7 @@ Home
 <div created="20220124175326357" modified="20220124175343928" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
 </div>
-<div created="20221210110600890" list="[[Emmanuelle &amp; socialisation]] [[current bookmarks]] DecomissionPcTt [[daily routine à inclure]] [[Flashcards à faire]] everywhere-bundle Home" modified="20221210110921208" title="$:/StoryList">
+<div created="20221213172917368" list="[[shadowrun ideas]] [[current bookmarks]] DecomissionPcTt [[daily routine à inclure]] [[Flashcards à faire]] everywhere-bundle Home" modified="20221213172917368" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20220124175934968" list="$:/core/ui/Buttons/more-tiddler-actions $:/core/ui/Buttons/edit $:/plugins/ajh/favorites/template $:/plugins/danielo515/encryptTiddler/crypt-button $:/core/ui/Buttons/info $:/core/ui/Buttons/new-here $:/core/ui/Buttons/new-journal-here $:/core/ui/Buttons/clone $:/core/ui/Buttons/export-tiddler $:/core/ui/Buttons/delete $:/core/ui/Buttons/permalink $:/core/ui/Buttons/permaview $:/core/ui/Buttons/open-window $:/core/ui/Buttons/close-others $:/core/ui/Buttons/fold-others $:/core/ui/Buttons/fold $:/core/ui/Buttons/fold-bar $:/core/ui/Buttons/close" modified="20220126091628309" title="$:/tags/ViewToolbar">
@@ -10200,11 +10200,11 @@ Home
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1280&quot;
+            &quot;text&quot;: &quot;1408&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;720&quot;
+            &quot;text&quot;: &quot;792&quot;
         }
     }
 }</pre>
@@ -17968,7 +17968,7 @@ It's NOT 'Just Going To Happen!'
 * clé U2F		https://u2f-key.tech/fr/
 </pre>
 </div>
-<div created="20221110161421302" modified="20221122160426399" tags="idea jeux jdr" title="shadowrun ideas">
+<div created="20221110161421302" modified="20221213174504335" tags="idea jeux jdr" title="shadowrun ideas">
 <pre>! idées personnages
 * &quot;paradogs&quot; paradox paranormal dog
 * buggy cyberware (not retracting razorblades, ...)
@@ -17985,7 +17985,7 @@ It's NOT 'Just Going To Happen!'
 primes-à-la-goule &gt;&gt; un pnj rapt des norm (ou les élève ?) pour les transformer en goules &amp; toucher les primes
 
 ! decking:
-* cameras
+* cameras / surveillance systems
 ** disable
 ** programmed disabled
 ** looping footage
@@ -18009,6 +18009,29 @@ primes-à-la-goule &gt;&gt; un pnj rapt des norm (ou les élève ?) pour les tra
 ** lock
 ** unlock
 ** force locked
+* cryptographie / stéganographie
+* rendering
+** 2D
+** 3D
+** simsense
+** deepfake
+** forge
+** detection
+* IA
+** dev
+** training
+** interractions
+** understanding
+* hardware
+** drivers
+** IoT
+* software
+** agents / alterations
+** programming
+** scripting
+* searching / googling
+** OSINT
+** 
 
 ! rules
 !! token edge/karma/fate
@@ -18056,6 +18079,9 @@ primes-à-la-goule &gt;&gt; un pnj rapt des norm (ou les élève ?) pour les tra
 * gestion des balles perdues
 ** chaque pnj dans le champ se voit attribuer un n°
 ** chaque 1 est relancé : si match = hit
+* ajoute 1 dé spécial par balle ? 
+** ces dés ne peuvent toucher que si le jet de base touche ??
+** seuil de réussite progressif pour chaque hit supp ??
 !! rolls parameters:
 * &quot;largeur&quot;= nb successes
 * &quot;hauteur&quot;= max success value
@@ -18208,7 +18234,9 @@ I also point out that an aspected d magician, even with no magical skills and ha
 
 ! magic
 * temps de cast
+** ''étaler le lancement d'un sort sur plusieurs actions pour réduire le drain''
 ** delayed initiative sequence
+** = geas
 * Geas
 ** Geas de condition : la créature doit être dans un état physique particulier.
 ** Geas de jeûne : la créature doit avoir passé la journée à jeûner.
@@ -18235,6 +18263,30 @@ I also point out that an aspected d magician, even with no magical skills and ha
 **** repel animals
 ** àla Rogues' World
 *** sorcellerie rituelle uniquement
+** àla StarWars
+*** force push
+*** force pull
+*** enhanced jump
+*** cat fall
+*** telekinesis
+*** combat sense
+* SR2+
+** magic pool = sorcery
+** sorts modulaires
+*** forme
+**** touch
+**** bolt
+**** ball
+**** cone
+**** detection
+*** effet
+**** ~manabolt : physical damage, mana spell
+**** ~forcebolt : physical damage, physical spell
+**** ~stunbolt : stun damage, mana spell
+*** flavour
+**** fire
+**** acid
+**** ice : reduce initiative / turn length
 </pre>
 </div>
 <div created="20190416125524938" modified="20190418152027154" tags="coinmagic magic" title="shuttle pass / flying shuttle pass">
