--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -443,6 +443,8 @@ Error message and password prompt
 
 <li>Franc-Maçonnerie</li>
 
+<li>fulgurances</li>
+
 <li>get rid of YOUTUBE addiction</li>
 
 <li>Getting Things Done</li>
@@ -10146,7 +10148,7 @@ Home
 <div created="20220124175326357" modified="20220124175343928" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
 </div>
-<div created="20221213172917368" list="[[shadowrun ideas]] [[current bookmarks]] DecomissionPcTt [[daily routine à inclure]] [[Flashcards à faire]] everywhere-bundle Home" modified="20221213172917368" title="$:/StoryList">
+<div created="20221229220735516" list="[[current bookmarks]] DecomissionPcTt [[daily routine à inclure]] [[Flashcards à faire]] everywhere-bundle Home pw" modified="20221229220735516" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20220124175934968" list="$:/core/ui/Buttons/more-tiddler-actions $:/core/ui/Buttons/edit $:/plugins/ajh/favorites/template $:/plugins/danielo515/encryptTiddler/crypt-button $:/core/ui/Buttons/info $:/core/ui/Buttons/new-here $:/core/ui/Buttons/new-journal-here $:/core/ui/Buttons/clone $:/core/ui/Buttons/export-tiddler $:/core/ui/Buttons/delete $:/core/ui/Buttons/permalink $:/core/ui/Buttons/permaview $:/core/ui/Buttons/open-window $:/core/ui/Buttons/close-others $:/core/ui/Buttons/fold-others $:/core/ui/Buttons/fold $:/core/ui/Buttons/fold-bar $:/core/ui/Buttons/close" modified="20220126091628309" title="$:/tags/ViewToolbar">
@@ -10168,7 +10170,7 @@ Home
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///C:/Users/samuel_lemoine/priv%C3%A9_perso/PortableGit/notes/TiddlyWiki.html&quot;
+            &quot;text&quot;: &quot;file:///C:/slemoine/priv%C3%A9%20perso/PortableGit/lenopgm/notes/TiddlyWiki.html&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
@@ -10188,7 +10190,7 @@ Home
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/C:/Users/samuel_lemoine/priv%C3%A9_perso/PortableGit/notes/TiddlyWiki.html&quot;
+            &quot;text&quot;: &quot;/C:/slemoine/priv%C3%A9%20perso/PortableGit/lenopgm/notes/TiddlyWiki.html&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -10200,11 +10202,11 @@ Home
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1408&quot;
+            &quot;text&quot;: &quot;1088&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;792&quot;
+            &quot;text&quot;: &quot;612&quot;
         }
     }
 }</pre>
@@ -13077,6 +13079,10 @@ Augustin Barruel - Mémoires pour servir à l'histoire du jacobinisme	https://fr
 * infiltration
 * neutralisation
 * déviation</pre>
+</div>
+<div created="20221229210623979" modified="20221229210814627" tags="" title="fulgurances">
+<pre>* le dollar n'est plus adossé à l'or mais à l'armée US
+* lors d'un échange/débat avec qqun &quot;qui pense mal&quot;, ne pas aboutir à le faire changer d'avis c'est le renforcer dans conviction en sa croyance</pre>
 </div>
 <div created="20200204100720701" modified="20200204100912106" tags="todo fiche_lecture" title="get rid of YOUTUBE addiction">
 <pre>! remove YT addiction	https://www.youtube.com/watch?v=cdyh9s0gUZo
@@ -16805,7 +16811,7 @@ Faites de tels exercices régulièrement durant vos répétitions. Vous verrez :
 * Yoshimo (BGII)
 * Sarevok</pre>
 </div>
-<div created="20190130144059269" modified="20221117180139655" tags="core" title="pw">
+<div created="20190130144059269" modified="20221229221001466" tags="core" title="pw">
 <pre>pw passw
 
 * cnpnet.cnp.fr =&gt;  CnpNet521t 
@@ -16953,6 +16959,7 @@ lego.com osefosef+422
 boardgamegeek / rpggeek boardgamegeek.os.os@xn osefosef b2211
 drivethrurpg.com drivethrurpg.s.lexn 2111
 magictricks.io =&gt; magictricksio.o**f.o**fxn / o**fo**f / o**fo**f+1234
+openai =&gt; openai.osef.osef@xn2212é
 ```
 
 
