--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -465,7 +465,7 @@ Error message and password prompt
 
 <li>Github repo</li>
 
-<li>HMM3 difficulty level</li>
+<li>HMM3 difficulty level / Heroes 3 / Heroes of Might &amp; Magic</li>
 
 <li>Home</li>
 
@@ -638,6 +638,8 @@ Error message and password prompt
 <li>Sankey says</li>
 
 <li>security</li>
+
+<li>Shadowrun Crossfire</li>
 
 <li>shadowrun ideas</li>
 
@@ -10192,7 +10194,7 @@ pw
 <div created="20220124175326357" modified="20220124175343928" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
 </div>
-<div list="[[shadowrun ideas]] [[achats amazon / leclerc / leboncoin]] [[vater td]] fulgurances [[current bookmarks]] DecomissionPcTt [[daily routine à inclure]] [[Flashcards à faire]] everywhere-bundle Home pw $:/ControlPanel" title="$:/StoryList">
+<div created="20230118095224781" list="[[shadowrun ideas]] [[achats amazon / leclerc / leboncoin]] [[vater td]] fulgurances [[current bookmarks]] DecomissionPcTt [[daily routine à inclure]] [[Flashcards à faire]] everywhere-bundle Home pw $:/ControlPanel" modified="20230118101929665" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20220124175934968" list="$:/core/ui/Buttons/more-tiddler-actions $:/core/ui/Buttons/edit $:/plugins/ajh/favorites/template $:/plugins/danielo515/encryptTiddler/crypt-button $:/core/ui/Buttons/info $:/core/ui/Buttons/new-here $:/core/ui/Buttons/new-journal-here $:/core/ui/Buttons/clone $:/core/ui/Buttons/export-tiddler $:/core/ui/Buttons/delete $:/core/ui/Buttons/permalink $:/core/ui/Buttons/permaview $:/core/ui/Buttons/open-window $:/core/ui/Buttons/close-others $:/core/ui/Buttons/fold-others $:/core/ui/Buttons/fold $:/core/ui/Buttons/fold-bar $:/core/ui/Buttons/close" modified="20220126091628309" title="$:/tags/ViewToolbar">
@@ -10246,11 +10248,11 @@ pw
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;2144&quot;
+            &quot;text&quot;: &quot;1696&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;1206&quot;
+            &quot;text&quot;: &quot;954&quot;
         }
     }
 }</pre>
@@ -10261,8 +10263,8 @@ pw
 <div created="20210313142548541" modified="20230117104717378" title="$:/temp/password2">
 <pre></pre>
 </div>
-<div created="20190114084246125" modified="20230117155537377" title="$:/temp/search">
-<pre></pre>
+<div created="20190114084246125" modified="20230118101928431" title="$:/temp/search">
+<pre>quotes</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -13208,9 +13210,9 @@ https://www.xmind.net/m/LUef/ / https://www.xmind.net/m/PbbJ/
 * photos ? (big)
 * useful code snippets</pre>
 </div>
-<div created="20201202123714439" modified="20201202123859678" tags="jeux" title="HMM3 difficulty level">
-<pre>http://heroes.thelazy.net/wiki/AI_Value
-http://www.celestialheavens.com/viewpage.php?id=24
+<div created="20201202123714439" modified="20230118100336400" tags="jeux" title="HMM3 difficulty level / Heroes 3 / Heroes of Might &amp; Magic">
+<pre>* http://heroes.thelazy.net/wiki/AI_Value
+* http://www.celestialheavens.com/viewpage.php?id=24
 
 ! Easy Difficulty  
 * AI doesn't consider the dangers it faces from enemy Heroes when moving it's heroes.
@@ -17151,7 +17153,7 @@ la connaissance (la certitude) est une sensation
 * Est-ce la meilleure option? 
 * Qu'est-ce qu'on peut faire dès maintenant?</pre>
 </div>
-<div created="20190529145620246" modified="20230112171900934" tags="hypnomachie core" title="Quotes, citations">
+<div created="20190529145620246" modified="20230118101952939" tags="hypnomachie core" title="Quotes, citations">
 <pre>&lt;&lt;&lt;
 ''Ne te hâte pas, ne t’inquiète pas, ton séjour ici ne sera pas long, alors n’oublie pas de t’arrêter pour sentir les fleurs. ''
 Walter Hagen
@@ -17612,7 +17614,7 @@ There are no limits. There are plateaus, but you must not stay there, you must g
 ! Lao Tsu
 
 &lt;&lt;&lt;
-“When I let go of what I am, I become what I might be.” Lao Tzu
+''“When I let go of what I am, I become what I might be.” Lao Tzu''
 &lt;&lt;&lt;
 
 &lt;&lt;&lt;
@@ -18124,6 +18126,64 @@ It's NOT 'Just Going To Happen!'
 <pre>* EVILGINX
 * Justin Izu	https://www.youtube.com/channel/UCe-0FAoHZyDLPMLHnYAuXsw/videos
 * clé U2F		https://u2f-key.tech/fr/
+</pre>
+</div>
+<div created="20230118100425254" modified="20230118101925090" tags="jeux todo" title="Shadowrun Crossfire">
+<pre>* Shadowrun: Crossfire - Gameplay &amp; Discussion (35mn)       https://www.youtube.com/watch?v=04Ye9DyRfys
+* Shadowrun Crossfire With the Designers #1      https://www.youtube.com/watch?v=NKNhKmk2sh4
+* The four roles of Shadowrun: Crossfire, and how to build them        https://boardgamegeek.com/thread/1234006/four-roles-shadowrun-crossfire-and-how-build-them
+* Feel Like Giving Up? Read This First!        https://boardgamegeek.com/thread/1257738/feel-giving-read-first
+* Sample 2 player game     https://boardgamegeek.com/thread/1309331/sample-2-player-game
+
+The strategy is unlike any other game I've ever played. You need to manage both your hand and your discard, and focus on card purchases that benefit you RIGHT NOW, or at most a turn or two from now, rather than trying to build up a perfect deck for the rest of the game. Building synergies with other players is critical - if another player buys a high value card, you want to have a card in your hand that will let you play cards from his discard. If he plays that card into the discard, he needs to make sure he doesn't play too many cards, so he doesn't shuffle up the discard before you can combo from it. There's a massive amount of interaction and planning between the players in this game.
+If you try to play it like Dominion, you'll lose.
+I've played over twenty games, and I'd say I now win somewhere between 30-50% of the time on the Crossfire mission with no upgrades. It's still a ridiculously random and unbalanced game, with some objectives / crossfire events being WAY WORSE than others, but it's definitely winnable if you figure out how to build for the immediate needs while not screwing yourself over for the future.
+
+Shadowrun is built to be extremely hard without any upgrades. In your first attempts, the more realistic goal is a successful abort, so you at least walk away with karma that you can eventually use to upgrade your character. I don't think we started reliably winning the first mission in the box until we had 2-3 upgrades each.
+There is a novice mission available online designed after players complained about how hard it is to gain any traction when you first start out. A common hack is also just to spot everyone 5 karma for an upgrade at the get go.
+
+I personally prefer to play Elf over Orc because the starting money is huge, starting with 1 money, you're going to have crappy damage for a long time, which means rounds last longer, more crossfire trigggers and more damage. Just have Elf go last in turn order, and kill her target first and she can buy some extremely powerful cards early on and blast away targets with ease. Orc is very tanky, a whip is really good at moving strong targets to you (and away from Elf).
+
+We really found that you really need to focus on assists and anything that lets you draw more cards. Just building for damage output is a losing strategy.
+
+    Each round after the obstacles are set out and the crossfire card resolved (if applicable) then the players plan out all of their turns before doing anything. This will help you allocate which resources where. Very often our first attack order plan gets revised when we take our time and create combos.
+    Remember what you buy from the market goes directly into your hand, so if you know that you're not going to clear all of the obstacles this round, buy from the market according to what you'll need next round. For example, there are lots of red obstacles, discuss with your team first and decide who should buy what to help in subsequent rounds.
+    You don't have to buy your main color. For example, sometimes Decker cards just don't come up and in our 2 player game, I'll start prioritizing Street Samurai instead. My man's role is Mage, but he buys lots of reds because support cards are so helpful - well actually we both do. And that leads me to..
+    Assists! One of the best parts of Shadowrun: Crossfire is there's no down time. Everyone is involved in everyone else's turns playing assist cards, and negotiating who will do what on which turn. Assist cards are essential to help break through colors and help a teammate get a kill, so that they can buy at the end of their turn.
+
+* https://boardgamegeek.com/thread/1299834/fan-expansion-hunters-arsenal
+* https://www.reddit.com/r/boardgames/comments/3ks0r9/rule_question_for_shadowrun_crossfire/?st=j2kgya7o&amp;sh=f6bcc061
+** 1) What happens when defeating the last scene's obstacle during a non first player turn? Do you change first player and draw a new crossfire card right away, or do remaining players get to play a &quot;light&quot; turn where no obstacles can be dealt with?
+** Assuming you're foing a Crossfire mission: Last obstacle defeated: Crossfire card to bottom of deck, everybody heals, buy round, new obstalces, play resumes with next player. No new crossfire until you get to first player (never changes).
+* split damage      https://boardgamegeek.com/thread/1247424/rule-questions
+** - do the order of damage symbols matter and or can be split?. if I have an obstacle with (in order): red, green, 2 and I have two cards - one dealing red and 2 and the other green, can I play them to defeat the obstacle? What if I had one card with red and the other with 2, green (not green, 2) - will these defeat it as well?
+** 2.Yes, they can be split. You just have to be sure that you can cover the needed damage.
+** 2. rattkin, there is a clear example in the rulebook where they split the damage on the card. Each card's effect happens when you play it, but the damage is basically a pool. The only exceptions are the * effect ones as those effects happen when you're applying damage. The only thing you can't do is split a card's damage across multiple obstacles. So, if you have a card like Deathtouch, reveal 3 blue cards (so you have 3 colorless &amp; 2 blue), but only need 2 colorless and 1 blue to defeat an obstacle, those 1 colorless and 1 blue are wasted.
+* https://boardgamegeek.com/filepage/132304/gameplay-summary
+** Damage from one card cannot be split between different obstacles, but damage from one or more cards played next to an obstacle is pooled and can be split (it does not have to be applied consecutively if damage in-between is also applied).
+** This is maybe the one thing most players are unaware of, it is not clearly written in the rulebook, as the “apply damage from left to right” rule often is read as the opposite. I am thinking about examples like the following: https://boardgamegeek.com/thread/1288631/we-really-seriously-need-ruling-got-your-backs
+* Q: When can I use upgrades?
+** A: Many upgrades say exactly when they apply. For those upgrades like &quot;Tricks&quot; and &quot;Got Your Backs&quot; that give you flexibility in when you can use them, you can use them at any time unless the upgrade itself says otherwise. However, you can't choose to interrupt other game actions like flipping up an obstacle and resolving its flipped effects or drawing and resolving a Crossfire card. For example, you can't start drawing a Crossfire card, see that it says &quot;Runners can't heal&quot;, and use &quot;Got Your Backs&quot; before the ban on healing kicks in.
+* Q: What exactly can I do with the upgrade &quot;Got Your Backs&quot;?
+** A: You can use it at any time. You can heal any runner, including yourself. The healed runner will draw two cards as per the normal rules for recovering from being staggered. Also remember that if all runners are ever staggered at the same time, the game ends in a loss immediately, so you won't be able to use &quot;Got Your Backs&quot; in that case.
+* Custom missions
+** https://www.reddit.com/r/ShadowrunCrossfire/comments/39ydz8/custom_missions/
+** https://boardgamegeek.com/thread/1324571/homebrew-mission-hack-n-run
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </pre>
 </div>
 <div created="20221110161421302" modified="20230112171119406" tags="idea jeux jdr" title="shadowrun ideas">
