--- a/homeboard.tw.html
+++ b/homeboard.tw.html
@@ -260,8 +260,6 @@ Error message and password prompt
 
 <li>backlog</li>
 
-<li>cardiff</li>
-
 <li>diac</li>
 
 <li>done</li>
@@ -280,6 +278,8 @@ Error message and password prompt
 
 <li>leno</li>
 
+<li>leno_done</li>
+
 <li>memorisation</li>
 
 <li>MoreSideBar/Tools</li>
@@ -289,6 +289,8 @@ Error message and password prompt
 <li>optim congés</li>
 
 <li>prépa baptème</li>
+
+<li>résiliation cardiff</li>
 
 <li>tid/BkN-hO25s</li>
 
@@ -8887,7 +8889,7 @@ very-muted-foreground: #849ebb</pre>
     }
 }</pre>
 </div>
-<div created="20230110162949540" list="[[home board]] cardiff" modified="20230117104605004" title="$:/plugins/ajh/favorites/list">
+<div created="20230110162949540" list="[[home board]] [[résiliation cardiff]] diac" modified="20230126102819284" tags="" title="$:/plugins/ajh/favorites/list">
 <pre></pre>
 </div>
 <div author="Danielo Rodriguez" bag="default" core-version="&gt;=5.1.0" dependents="" description="double click to edit tiddlers" list="readme" plugin-type="plugin" revision="0" source="https://github.com/danielo515/TW5-2click2edit" title="$:/plugins/danielo515/2click2edit" type="application/json" version="0.1">
@@ -9537,13 +9539,13 @@ very-muted-foreground: #849ebb</pre>
 <div created="20230110123831718" modified="20230110163427365" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
-<div created="20230110123925447" modified="20230117104556491" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/Tags</pre>
+<div created="20230110123925447" modified="20230126102720048" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/Recent</pre>
 </div>
-<div created="20230110123919368" modified="20230117104642636" title="$:/state/tab/sidebar--1835078512">
-<pre>$:/plugins/ajh/favorites/SideBar</pre>
+<div created="20230110123919368" modified="20230126102710578" title="$:/state/tab/sidebar--1835078512">
+<pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div list="diac [[prépa baptème]] [[home board]] leno" title="$:/StoryList">
+<div list="[[prépa baptème]] [[home board]] leno leno_done" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20230110124531602" list="$:/core/ui/Buttons/more-tiddler-actions $:/core/ui/Buttons/info $:/core/ui/Buttons/new-here $:/core/ui/Buttons/new-journal-here $:/core/ui/Buttons/clone $:/core/ui/Buttons/export-tiddler $:/core/ui/Buttons/delete $:/core/ui/Buttons/permalink $:/core/ui/Buttons/permaview $:/core/ui/Buttons/open-window $:/core/ui/Buttons/close-others $:/core/ui/Buttons/fold-others $:/core/ui/Buttons/fold $:/core/ui/Buttons/fold-bar $:/core/ui/Buttons/edit $:/core/ui/Buttons/close" modified="20230110124531602" tags="rd_gld/prefs" title="$:/tags/ViewToolbar">
@@ -9595,8 +9597,8 @@ very-muted-foreground: #849ebb</pre>
     }
 }</pre>
 </div>
-<div created="20230117140157564" modified="20230117140157988" title="$:/temp/search">
-<pre>diac</pre>
+<div created="20230117140157564" modified="20230126102758446" title="$:/temp/search">
+<pre>card</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Removes borders from tiddlers" name="Seamless" plugin-type="theme" title="$:/themes/tiddlywiki/seamless" type="application/json" version="5.1.14">
 <pre>{
@@ -9739,17 +9741,10 @@ very-muted-foreground: #849ebb</pre>
 <div created="20230111181256170" modified="20230117085011614" shorttext="prépa maison Mars" tags="TODO" title="accueil bébé">
 <pre></pre>
 </div>
-<div created="20230110162950855" dpbd-collapse_in="" list="tid/ryJXYT6cs tid/HJVjF6acj tid/rkzwhJQsj [[optim congés]]" modified="20230117094742085" tags="[[home board]]" title="backlog">
+<div created="20230110162950855" dpbd-collapse_in="" list="tid/ryJXYT6cs tid/HJVjF6acj tid/rkzwhJQsj [[optim congés]]" modified="20230127081122493" tags="[[home board]]" title="backlog">
 <pre></pre>
 </div>
-<div created="20230111103610391" modified="20230117104620903" shorttext="''résil° Cardiff''" tags="[[todo SAM]]" title="cardiff">
-<pre>https://espaceadhesion.cbp-solutions.fr/#/otp
-
-17223066
-
-cbp4you.fr &quot;cardiff&quot; saleya123c</pre>
-</div>
-<div created="20230111103538724" modified="20230117162824845" shorttext="''DIAC'' / SoH ZOE CN-843-RS" tags="[[todo SAM]]" title="diac">
+<div created="20230111103538724" modified="20230126102544064" shorttext="''DIAC'' / SoH ZOE CN-843-RS" tags="[[en cours SAM]]" title="diac">
 <pre>* ~~smdc~~
 ** ~~02 40 31 50 74~~
 * ~~Renault Dacia Garage d'Herbauges Agent~~
@@ -9772,13 +9767,13 @@ cbp4you.fr &quot;cardiff&quot; saleya123c</pre>
 *** mails
 ** 6 mois de délai</pre>
 </div>
-<div created="20230110163153665" dpbd-collapse_in="[[home board]]" list="" modified="20230117084703344" tags="[[home board]]" title="done">
+<div created="20230110163153665" dpbd-collapse_in="[[home board]]" list="" modified="20230126102544064" tags="[[home board]]" title="done">
 <pre></pre>
 </div>
-<div created="20230110163030609" list="" modified="20230117084703344" tags="[[home board]]" title="en cours JU">
+<div created="20230110163030609" dpbd-collapse_in="[[home board]]" list="" modified="20230127081128332" tags="[[home board]]" title="en cours JU">
 <pre></pre>
 </div>
-<div created="20230110163009889" list="" modified="20230117084703344" tags="[[home board]]" title="en cours SAM">
+<div created="20230110163009889" list="diac" modified="20230126102544064" tags="[[home board]]" title="en cours SAM">
 <pre></pre>
 </div>
 <div created="20230110141834789" modified="20230110144519119" title="explications">
@@ -9795,7 +9790,7 @@ cbp4you.fr &quot;cardiff&quot; saleya123c</pre>
 <div created="20230111124336323" modified="20230111124403856" shorttext="familiale 7+ places" tags="TODO" title="familiale">
 <pre></pre>
 </div>
-<div created="20230110162941854" dpbd-displaytext="yes" dpbd-listwidth-num="6" dpbd-widthismax="yes" list="backlog TODO [[todo SAM]] [[todo JU]] [[en cours SAM]] [[en cours JU]] done" modified="20230117084708990" tags="" title="home board">
+<div created="20230110162941854" dpbd-displaytext="no" dpbd-listwidth-num="6" dpbd-widthismax="yes" list="backlog TODO [[todo SAM]] [[todo JU]] [[en cours SAM]] [[en cours JU]] done" modified="20230123152620719" tags="" title="home board">
 <pre>&lt;$transclude tiddler=&quot;$:/plugins/reidgould/dpbd/templates/view/Board&quot; mode=&quot;inline&quot; /&gt;</pre>
 </div>
 <div created="20230111103633843" modified="20230112163456103" shorttext="isolation &amp; PAC" tags="[[todo JU]]" title="isolation &amp; citemetry">
@@ -9803,6 +9798,9 @@ cbp4you.fr &quot;cardiff&quot; saleya123c</pre>
 </div>
 <div created="20230111181107901" modified="20230111181150489" tags="" title="leno">
 <pre>&lt;$transclude tiddler=&quot;$:/plugins/reidgould/dpbd/templates/view/Board&quot; mode=&quot;inline&quot; /&gt;</pre>
+</div>
+<div created="20230130080940171" list="tid/Hki1aO2cj tid/rkenhdh9i" modified="20230130081018106" tags="leno" title="leno_done">
+<pre></pre>
 </div>
 <div created="20230111103742222" modified="20230111103803283" shorttext="memorisation Emma" tags="TODO" title="memorisation">
 <pre></pre>
@@ -9824,6 +9822,13 @@ cbp4you.fr &quot;cardiff&quot; saleya123c</pre>
 * vendredi 3 mars : soirée (trouver garde)
 * dimanche 6 mars 9h30</pre>
 </div>
+<div created="20230111103610391" modified="20230126102819284" shorttext="''résil° Cardiff''" tags="[[todo SAM]]" title="résiliation cardiff">
+<pre>https://espaceadhesion.cbp-solutions.fr/#/otp
+
+17223066
+
+cbp4you.fr &quot;cardiff&quot; saleya123c</pre>
+</div>
 <div created="20230111181212409" modified="20230111181221727" shorttext="playlist major" tags="todo" title="tid/BkN-hO25s">
 <pre></pre>
 </div>
@@ -9842,13 +9847,13 @@ cbp4you.fr &quot;cardiff&quot; saleya123c</pre>
 <div created="20230111181435159" modified="20230111181550028" shorttext="ajout board perso dans wiki" tags="todo" title="tid/Hk75nOn9s">
 <pre></pre>
 </div>
-<div created="20230111181602780" modified="20230111181615220" shorttext="heroquest" tags="todo" title="tid/Hki1aO2cj">
+<div created="20230111181602780" modified="20230130081016025" shorttext="heroquest" tags="leno_done" title="tid/Hki1aO2cj">
 <pre></pre>
 </div>
 <div created="20230111181158784" modified="20230111181209230" shorttext="unstash tao" tags="todo" title="tid/rJDgndn9j">
 <pre></pre>
 </div>
-<div created="20230111181503979" modified="20230111181536988" shorttext="MYZ écran &amp; dés" tags="todo" title="tid/rkenhdh9i">
+<div created="20230111181503979" modified="20230130081018106" shorttext="MYZ écran &amp; dés" tags="leno_done" title="tid/rkenhdh9i">
 <pre></pre>
 </div>
 <div created="20230116152513704" modified="20230116152523363" shorttext="utiliser chèques énergie" tags="backlog" title="tid/rkzwhJQsj">
@@ -9889,16 +9894,16 @@ cbp4you.fr &quot;cardiff&quot; saleya123c</pre>
 &lt;/$list&gt;
 &lt;/ul&gt;</pre>
 </div>
-<div created="20230110163339973" list="memorisation familiale morlaix [[accueil bébé]] [[prépa baptème]]" modified="20230117085011614" tags="[[home board]]" title="TODO">
+<div created="20230110163339973" list="memorisation familiale morlaix [[accueil bébé]] [[prépa baptème]]" modified="20230126102544063" tags="[[home board]]" title="TODO">
 <pre></pre>
 </div>
-<div created="20230111181117956" list="tid/ry60iO2co tid/Hk75nOn9s tid/rJDgndn9j tid/BkN-hO25s tid/H1ir2d35i tid/rkenhdh9i tid/Hki1aO2cj tid/ByB4q2p9j" modified="20230112164948918" tags="leno" title="todo">
+<div created="20230111181117956" list="tid/ry60iO2co tid/Hk75nOn9s tid/rJDgndn9j tid/BkN-hO25s tid/H1ir2d35i tid/ByB4q2p9j" modified="20230130081035553" tags="leno" title="todo">
 <pre></pre>
 </div>
-<div created="20230110163214615" list="[[isolation &amp; citemetry]]" modified="20230117084703344" tags="[[home board]]" title="todo JU">
+<div created="20230110163214615" list="[[isolation &amp; citemetry]]" modified="20230126102544063" tags="[[home board]]" title="todo JU">
 <pre></pre>
 </div>
-<div created="20230110163003622" list="diac cardiff" modified="20230117084703344" tags="[[home board]]" title="todo SAM">
+<div created="20230110163003622" list="[[résiliation cardiff]]" modified="20230126102819285" tags="[[home board]]" title="todo SAM">
 <pre></pre>
 </div>
 <div tags="Tips" title="Warning: Board Removes Tags">
