--- a/homeboard.tw.html
+++ b/homeboard.tw.html
@@ -314,6 +314,8 @@ Error message and password prompt
 
 <li>tid/ryJXYT6cs</li>
 
+<li>tid/SyJN_ERhj</li>
+
 <li>Tips</li>
 
 <li>TODO</li>
@@ -9545,7 +9547,7 @@ very-muted-foreground: #849ebb</pre>
 <div created="20230110123919368" modified="20230126102710578" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div list="[[prépa baptème]] [[home board]] leno leno_done" title="$:/StoryList">
+<div list="[[prépa baptème]] [[home board]] leno" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20230110124531602" list="$:/core/ui/Buttons/more-tiddler-actions $:/core/ui/Buttons/info $:/core/ui/Buttons/new-here $:/core/ui/Buttons/new-journal-here $:/core/ui/Buttons/clone $:/core/ui/Buttons/export-tiddler $:/core/ui/Buttons/delete $:/core/ui/Buttons/permalink $:/core/ui/Buttons/permaview $:/core/ui/Buttons/open-window $:/core/ui/Buttons/close-others $:/core/ui/Buttons/fold-others $:/core/ui/Buttons/fold $:/core/ui/Buttons/fold-bar $:/core/ui/Buttons/edit $:/core/ui/Buttons/close" modified="20230110124531602" tags="rd_gld/prefs" title="$:/tags/ViewToolbar">
@@ -9738,10 +9740,10 @@ very-muted-foreground: #849ebb</pre>
 <div tags="rd_gld/prefs" title="$:/themes/tiddlywiki/vanilla/options/sidebarlayout">
 <pre>fluid-fixed</pre>
 </div>
-<div created="20230111181256170" modified="20230117085011614" shorttext="prépa maison Mars" tags="TODO" title="accueil bébé">
+<div created="20230111181256170" modified="20230206082146571" shorttext="prépa maison Mars" tags="[[todo SAM]]" title="accueil bébé">
 <pre></pre>
 </div>
-<div created="20230110162950855" dpbd-collapse_in="" list="tid/ryJXYT6cs tid/HJVjF6acj tid/rkzwhJQsj [[optim congés]]" modified="20230127081122493" tags="[[home board]]" title="backlog">
+<div created="20230110162950855" dpbd-collapse_in="" list="tid/ryJXYT6cs tid/HJVjF6acj tid/rkzwhJQsj [[optim congés]] tid/SyJN_ERhj" modified="20230206082146570" tags="[[home board]]" title="backlog">
 <pre></pre>
 </div>
 <div created="20230111103538724" modified="20230126102544064" shorttext="''DIAC'' / SoH ZOE CN-843-RS" tags="[[en cours SAM]]" title="diac">
@@ -9767,13 +9769,13 @@ very-muted-foreground: #849ebb</pre>
 *** mails
 ** 6 mois de délai</pre>
 </div>
-<div created="20230110163153665" dpbd-collapse_in="[[home board]]" list="" modified="20230126102544064" tags="[[home board]]" title="done">
+<div created="20230110163153665" dpbd-collapse_in="[[home board]]" list="" modified="20230206082146571" tags="[[home board]]" title="done">
 <pre></pre>
 </div>
-<div created="20230110163030609" dpbd-collapse_in="[[home board]]" list="" modified="20230127081128332" tags="[[home board]]" title="en cours JU">
+<div created="20230110163030609" dpbd-collapse_in="[[home board]]" list="[[prépa baptème]]" modified="20230206082146570" tags="[[home board]]" title="en cours JU">
 <pre></pre>
 </div>
-<div created="20230110163009889" list="diac" modified="20230126102544064" tags="[[home board]]" title="en cours SAM">
+<div created="20230110163009889" list="diac" modified="20230206082146570" tags="[[home board]]" title="en cours SAM">
 <pre></pre>
 </div>
 <div created="20230110141834789" modified="20230110144519119" title="explications">
@@ -9817,7 +9819,7 @@ very-muted-foreground: #849ebb</pre>
 * mercredi 1er novembre 2023 	La Toussaint
 * ''samedi 11 novembre'' 2023 	Armistice 1918</pre>
 </div>
-<div created="20230116133105943" modified="20230117084703345" tags="TODO" title="prépa baptème">
+<div created="20230116133105943" modified="20230206082141641" tags="[[en cours JU]]" title="prépa baptème">
 <pre>* samedi 4 février 9h30 (ste pazanne)
 * vendredi 3 mars : soirée (trouver garde)
 * dimanche 6 mars 9h30</pre>
@@ -9865,6 +9867,9 @@ cbp4you.fr &quot;cardiff&quot; saleya123c</pre>
 <div created="20230112175327371" modified="20230112175338107" shorttext="BNP dez esprit libre" tags="backlog" title="tid/ryJXYT6cs">
 <pre></pre>
 </div>
+<div created="20230206081951338" modified="20230206081957626" shorttext="achat perceuse" tags="backlog" title="tid/SyJN_ERhj">
+<pre></pre>
+</div>
 <div list="[[Any Tiddler can be a List or Card]] [[Drop Any Link (Including Titles)]] [[Drop 'Tag Pill' to Drop All Tagged]] [[Hold Shift for Horizontal Scroll]] [[Cleaning Up Temporary Data]] [[Warning: No Multiline Shorttext]] [[Warning: Don't Double Edit]] [[Warning: Board Removes Tags]] [[Warning: Don't Drop Selected Text]] [[Warning: Bug - Double Quotes in Titles]]" tags="[[User Guide Home]]" title="Tips">
 <pre>\define currentFilter()
 [[Tips]tagging[]]
@@ -9894,16 +9899,16 @@ cbp4you.fr &quot;cardiff&quot; saleya123c</pre>
 &lt;/$list&gt;
 &lt;/ul&gt;</pre>
 </div>
-<div created="20230110163339973" list="memorisation familiale morlaix [[accueil bébé]] [[prépa baptème]]" modified="20230126102544063" tags="[[home board]]" title="TODO">
+<div created="20230110163339973" list="memorisation familiale morlaix" modified="20230206082146570" tags="[[home board]]" title="TODO">
 <pre></pre>
 </div>
 <div created="20230111181117956" list="tid/ry60iO2co tid/Hk75nOn9s tid/rJDgndn9j tid/BkN-hO25s tid/H1ir2d35i tid/ByB4q2p9j" modified="20230130081035553" tags="leno" title="todo">
 <pre></pre>
 </div>
-<div created="20230110163214615" list="[[isolation &amp; citemetry]]" modified="20230126102544063" tags="[[home board]]" title="todo JU">
+<div created="20230110163214615" list="[[isolation &amp; citemetry]]" modified="20230206082146570" tags="[[home board]]" title="todo JU">
 <pre></pre>
 </div>
-<div created="20230110163003622" list="[[résiliation cardiff]]" modified="20230126102819285" tags="[[home board]]" title="todo SAM">
+<div created="20230110163003622" list="[[résiliation cardiff]] [[accueil bébé]]" modified="20230206082146571" tags="[[home board]]" title="todo SAM">
 <pre></pre>
 </div>
 <div tags="Tips" title="Warning: Board Removes Tags">
