--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -457,7 +457,7 @@ Error message and password prompt
 
 <li>Franc-Maçonnerie</li>
 
-<li>fulgurances</li>
+<li>fulgurances / épiphanies</li>
 
 <li>get rid of YOUTUBE addiction</li>
 
@@ -644,6 +644,8 @@ Error message and password prompt
 <li>shadowrun ideas</li>
 
 <li>shuttle pass / flying shuttle pass</li>
+
+<li>si demain je meurs</li>
 
 <li>sms textos</li>
 
@@ -9642,8 +9644,9 @@ Now comes the &quot;hard&quot; part. Take the deck face up (slightly angled so t
     }
 }</pre>
 </div>
-<div created="20190108105342821" modified="20230104143555002" title="$:/DefaultTiddlers">
-<pre>&quot;shadowrun ideas&quot;
+<div created="20190108105342821" modified="20230213174246325" title="$:/DefaultTiddlers">
+<pre>&quot;si demain je meurs&quot;
+&quot;shadowrun ideas&quot;
 &quot;achats amazon / leclerc / leboncoin&quot;
 &quot;vater td&quot;
 &quot;fulgurances&quot;
@@ -9736,7 +9739,7 @@ pw
     }
 }</pre>
 </div>
-<div created="20220124175913842" list="cadeaux pw [[Perçou kid talk Perceval]] [[daily routine à inclure]] [[vater td]] wishlist [[Flashcards à faire]] DecomissionPcTt [[dev responsable &amp; job hunt]] everywhere-bundle [[buy achats amazon / leclerc / leboncoin]] fulgurances $:/ControlPanel" modified="20230112164041865" tags="" title="$:/plugins/ajh/favorites/list">
+<div created="20220124175913842" list="cadeaux pw [[Perçou kid talk Perceval]] [[daily routine à inclure]] [[vater td]] wishlist [[Flashcards à faire]] DecomissionPcTt [[dev responsable &amp; job hunt]] everywhere-bundle [[buy achats amazon / leclerc / leboncoin]] [[fulgurances / épiphanies]] $:/ControlPanel [[Quotes, citations]]" modified="20230206143521554" tags="" title="$:/plugins/ajh/favorites/list">
 <pre></pre>
 </div>
 <div caption="{{ $:/core/images/star-filled}} {{$:/language/Buttons/Favorites/Caption}}" created="20220124175934967" description="{{$:/language/Buttons/Favorites/Hint}}" modified="20220124175934967" tags="$:/tags/ViewToolbar" title="$:/plugins/ajh/favorites/template">
@@ -10111,7 +10114,7 @@ pw
 <div created="20210313142530656" modified="20230201085449943" title="$:/state/encrypt">
 <pre></pre>
 </div>
-<div created="20230104143339124" modified="20230104143558813" title="$:/state/folded/$:/ControlPanel">
+<div created="20230104143339124" modified="20230213174252805" title="$:/state/folded/$:/ControlPanel">
 <pre>hide</pre>
 </div>
 <div created="20230104133644598" modified="20230112163906568" title="$:/state/folded/achats amazon / leclerc / leboncoin">
@@ -10132,8 +10135,8 @@ pw
 <div created="20220503121408371" modified="20230104145528679" title="$:/state/folded/Flashcards à faire">
 <pre>hide</pre>
 </div>
-<div created="20230104143458898" modified="20230123141227391" title="$:/state/folded/fulgurances">
-<pre>hide</pre>
+<div created="20230104143458898" modified="20230206135351738" title="$:/state/folded/fulgurances">
+<pre>show</pre>
 </div>
 <div created="20220124175419175" modified="20220131132630771" title="$:/state/folded/Home">
 <pre>show</pre>
@@ -10186,13 +10189,13 @@ pw
 <div created="20190108104722609" modified="20230104142023080" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
-<div created="20190108101211875" modified="20230120104440740" title="$:/state/tab/sidebar--595412856">
+<div created="20190108101211875" modified="20230213174234048" title="$:/state/tab/sidebar--595412856">
 <pre>$:/plugins/ajh/favorites/SideBar</pre>
 </div>
 <div created="20220124175326357" modified="20220124175343928" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
 </div>
-<div created="20230201084838433" list="[[shadowrun ideas]] [[achats amazon / leclerc / leboncoin]] [[vater td]] fulgurances [[current bookmarks]] DecomissionPcTt [[daily routine à inclure]] [[Flashcards à faire]] everywhere-bundle Home pw $:/ControlPanel" modified="20230201084838433" title="$:/StoryList">
+<div created="20230214094824458" list="[[Quotes, citations]] [[si demain je meurs]] [[shadowrun ideas]] [[achats amazon / leclerc / leboncoin]] [[vater td]] fulgurances [[current bookmarks]] DecomissionPcTt [[daily routine à inclure]] [[Flashcards à faire]] everywhere-bundle Home pw $:/ControlPanel" modified="20230214094824458" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20220124175934968" list="$:/core/ui/Buttons/more-tiddler-actions $:/core/ui/Buttons/edit $:/plugins/ajh/favorites/template $:/plugins/danielo515/encryptTiddler/crypt-button $:/core/ui/Buttons/info $:/core/ui/Buttons/new-here $:/core/ui/Buttons/new-journal-here $:/core/ui/Buttons/clone $:/core/ui/Buttons/export-tiddler $:/core/ui/Buttons/delete $:/core/ui/Buttons/permalink $:/core/ui/Buttons/permaview $:/core/ui/Buttons/open-window $:/core/ui/Buttons/close-others $:/core/ui/Buttons/fold-others $:/core/ui/Buttons/fold $:/core/ui/Buttons/fold-bar $:/core/ui/Buttons/close" modified="20220126091628309" title="$:/tags/ViewToolbar">
@@ -10246,11 +10249,11 @@ pw
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1696&quot;
+            &quot;text&quot;: &quot;2144&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;954&quot;
+            &quot;text&quot;: &quot;1206&quot;
         }
     }
 }</pre>
@@ -10261,8 +10264,8 @@ pw
 <div created="20210313142548541" modified="20230201085447979" title="$:/temp/password2">
 <pre></pre>
 </div>
-<div created="20190114084246125" modified="20230201075742557" title="$:/temp/search">
-<pre>anniv</pre>
+<div created="20190114084246125" modified="20230206143515453" title="$:/temp/search">
+<pre>quotes</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -13167,7 +13170,7 @@ Augustin Barruel - Mémoires pour servir à l'histoire du jacobinisme	https://fr
 * neutralisation
 * déviation</pre>
 </div>
-<div created="20221229210623979" modified="20230123141223368" tags="" title="fulgurances">
+<div created="20221229210623979" modified="20230206135649388" tags="" title="fulgurances / épiphanies">
 <pre>* le dollar n'est plus adossé à l'or mais à l'armée US
 * lors d'un échange/débat avec qqun &quot;qui pense mal&quot;, ne pas aboutir à le faire changer d'avis c'est le renforcer dans conviction en sa croyance
 * le capitalisme (entendu au sens de &quot;libre marché dérégulé&quot;) &quot;tend vers l'infini&quot; / tend naturellement à aller chercher les instincts les plus profonds de l'homme, puisque c'est ce qui fait le plus vendre : le neuro-marketing découle logiquement d'un marché dérégulé, et aboutit à un &quot;avilissement&quot; global de la société en appuyant &quot;là où ça marche&quot;, là où des millions d'années de pression évolutive ont préparé des chemins neuraux (besoin d'accumulation, reproduction (porno, sites de rencontre...)
@@ -13175,6 +13178,11 @@ Augustin Barruel - Mémoires pour servir à l'histoire du jacobinisme	https://fr
 ** part d'une bonne idée mais sans modétisation
 ** part du principe que la monétisation sera possible une fois l'engouement / le traffic / la popularité d'usage obtenus
 ** les investisseurs (bourse ou autre) veulent un retour sur investissement au bout d'un moment : le service se pourrifie pour monétiser / rentabiliser
+* théorème d'incomplétude de Goedel (+ machine de Turing / langage turing-complet ?)
+** un langage de description du réel / de la logique / des mathématiques porte en lui intrinsèquement une exclusion de ce qu'il saura décrire du réel (hence &quot;incomplétude&quot;)
+** aucun langage ne peut décrire complètement le réel
+** le réel est inaccessible par le langage
+** le réel (est) Dieu (parallèle / similitude / ...?)
 
 
 &lt;&lt;&lt;
@@ -15891,7 +15899,7 @@ Pour les aspects scientifiques de mon propos, qui le fondent et le justifient, l
 C'est en me fondant sur un puissant socle scientifique, historique, symbolique, que j'ai pu concevoir cette approche de la musculation.
 </pre>
 </div>
-<div created="20190322150105505" modified="20230119080417679" tags="improve core" title="online services, addons &amp; resources">
+<div created="20190322150105505" modified="20230206093748902" tags="improve core" title="online services, addons &amp; resources">
 <pre>! misc
 * ''git interactive tutorial'' https://learngitbranching.js.org/?locale=fr_FR
 * https://lew.la/ a collection of web tools
@@ -15931,6 +15939,7 @@ C'est en me fondant sur un puissant socle scientifique, historique, symbolique, 
 ! pdf libraries
 * ''https://fr.annas-archive.org/'' (moteur de recherche)
 * ''https://kupdf.net/''
+* https://vdocuments.net/
 * https://oiipdf.com
 * ''https://bookshome.net/'' ~~https://z-lib.org/~~ ~~https://1lib.fr~~
 * https://libgen.fun
@@ -17179,7 +17188,7 @@ la connaissance (la certitude) est une sensation
 * Est-ce la meilleure option? 
 * Qu'est-ce qu'on peut faire dès maintenant?</pre>
 </div>
-<div created="20190529145620246" modified="20230118161231270" tags="hypnomachie core" title="Quotes, citations">
+<div created="20190529145620246" modified="20230214095739123" tags="hypnomachie core" title="Quotes, citations">
 <pre>&lt;&lt;&lt;
 l'humanité tisse la toile où elle se prend
 &lt;&lt;&lt;
@@ -17210,7 +17219,7 @@ jamais on n'a raison contre son seigneur, ou contre un enfant qui pleure
 
 
 &lt;&lt;&lt;
-aucune route n'est longue à côté d'un amiaucune route n'est longue à côté d'un ami
+aucune route n'est longue à côté d'un ami
 &lt;&lt;&lt;
 
 
@@ -17643,6 +17652,13 @@ There are no limits. There are plateaus, but you must not stay there, you must g
 &lt;&lt;&lt;
 
 ! Lao Tsu
+
+
+
+&lt;&lt;&lt;
+''celui qui se contente est riche''
+&lt;&lt;&lt;
+
 
 &lt;&lt;&lt;
 ''“When I let go of what I am, I become what I might be.” Lao Tzu''
@@ -18611,6 +18627,10 @@ The answer to your second question: the realization that the utility switch coul
 
 </pre>
 </div>
+<div created="20230213163122218" modified="20230213174221120" tags="" title="si demain je meurs">
+<pre>*  Mc Solaar - Solaar pleure
+* Ne crains pas, je suis ton Dieu</pre>
+</div>
 <div created="20210201141630186" modified="20230201075736515" tags="" title="sms textos">
 <pre>(todo from here)
 
@@ -19182,7 +19202,7 @@ Top, juste pour te dire que je n'aime pas balancer, mais ce genre de ragots me d
 &lt;&lt;&lt;
 </pre>
 </div>
-<div created="20220829090335038" modified="20230127130536898" tags="" title="stand-up ideas">
+<div created="20220829090335038" modified="20230206135334989" tags="" title="stand-up ideas">
 <pre>* arrêter / allaiter
 * karité / qualité
 * (dé)serrer / seller
@@ -19193,7 +19213,20 @@ Top, juste pour te dire que je n'aime pas balancer, mais ce genre de ragots me d
 * (bébé dort sous le regarde maternel) sa mère veille sa merveille
 * petit hippopotame t'am...
 * l'aversion à la version
-* il fait erreur / il fait terreur</pre>
+* il fait erreur / il fait terreur
+* le divain divan d'yvain ou d'yvan ?
+* je t'amène une camomille ? une camisole ? une camomisole ?
+* pléthore / garde préthorienne
+
+
+```
+il m'a rendu son livre déchiré
+                        ^ivre
+                        ^abimé
+                        ^livre titre &quot;Déchiré&quot;
+
+```
+</pre>
 </div>
 <div created="20200717093101888" modified="20200722084901185" tags="" title="Statistiques ethniques USA">
 <pre>! USA
